# FastAPI-Course

./: pyproject.toml
app/: config.py  exceptions.py  main.py
app/bookings/: controller.py  models.py  router.py  schemas.py
app/database/: controller.py  models.py
app/hotels/: controller.py  models.py  router.py
app/hotels/rooms/: controller.py  models.py  router.py
app/migrations/: env.py
app/migrations/versions/: 0d5ba5926cf1_migration_2.py  8fa55bf854b8_.py  9591fa888b03_migration_1.py  a473de65f89f_init.py  b634722fe61e_.py  c219b4241900_.py  ebf514e44cc7_.py
app/users/: auth.py  controller.py  models.py  router.py  schemas.py
fastapi_course/: main.py
