[tool.poetry]
name = "fastapi-course"
version = "0.2.0"
description = ""
authors = ["Python4k <python4k@vk.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
psycopg = "^3.1.19"
pydantic-settings = "^2.2.1"
passlib = "^1.7.4"
bcrypt = "^4.1.3"
pyjwt = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
